doc/examples/InvalidTests/TestInvalidPoint.agl
abc : Point = (1,"abc"); # Error. Requires numeric operands!
